<resources>
    <string name="app_name">TuVecin@TeAyuda</string>

    <!--Intro-->
    <string name="intro_next">Siguiente</string>
    <string name="intro_skip">Saltar</string>

    <!--Login-->
    <string name="login_user">Teléfono o email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_do_login">Acceder</string>
    <string name="login_want_to_help">Quiero Ayudar</string>
    <string name="login_need_help">Necesito Ayuda</string>
    <string name="login_login_error">Error en el login</string>
    <string name="login_login_error_invalid_user">Usuario no válido</string>
    <string name="login_login_error_invalid_password">Contraseña no válida</string>

    <!--Need help-->
    <string name="need_help_title">Necesito Ayuda</string>
    <string name="need_help_subtitle">Si necesitas ayuda o sabes de alguien que la pueda necesitar, rellena este formulario y una persona voluntaria de confianza te ayudará a cubrir tus necesidades, tales como hacerte la compra de alimentos, fármacos, útiles de casa, cuidar a los niños o algún otro tipo de asistencia.</string>
    <string name="need_help_button">¡Necesito Ayuda!</string>

    <!--Want to help-->
    <string name="want_to_help_title">Voluntari@</string>
    <string name="want_to_help_subtitle">¿Quieres ayudar a otras personas? ¡Apúntate! Puedes ayudar tanto a que personas en riesgo no tengan que exponerse, como echando una mano a quien no pueda atender a sus mayores o niños.</string>
    <string name="want_to_help_button">¡Quiero Ayudar!</string>

    <!--Register-->
    <string name="register_title">Registro</string>
    <string name="register_name">Nombre y Apellidos</string>
    <string name="register_name_invalid">Nombre y Apellidos no válidos</string>
    <string name="register_phone">Teléfono</string>
    <string name="register_phone_invalid">Teléfono no válido</string>
    <string name="register_email">Email</string>
    <string name="register_email_invalid">Email no válida</string>
    <string name="register_password">Contraseña (8 car.min)</string>
    <string name="register_password_invalid">Contraseña no válida</string>
    <string name="register_area">Preferencia de desplazamiento</string>
    <string name="register_area_invalid">Preferencia de desplazamiento no válida</string>
    <string name="register_region">Provincia</string>
    <string name="register_region_invalid">Provincia no válida</string>
    <string name="register_city">Ciudad</string>
    <string name="register_city_invalid">Ciudad no válida</string>
    <string name="register_address">Dirección (Calle, Número, etc..)</string>
    <string name="register_address_invalid">Dirección no válida</string>
    <string name="register_postal_code">Codigo Postal</string>
    <string name="register_postal_code_invalid">Codigo Postal no válido</string>
    <string name="register_button">Inscribirme</string>
    <string name="register_error">Error en el registro</string>

    <!-- Dashboard -->
    <string name="dashboard_title_my_requests">Mis Solicitudes</string>
    <string name="dashboard_title_pending_requests">Solicitudes pendientes</string>
    <string name="dashboard_profile">Perfil</string>
    <string name="dashboard_my_requests_empty">Por ahora no tienes solicitudes de ayuda en tu lista ¿Empezamos?</string>
    <string name="dashboard_pending_requests_empty">"Por ahora no tenemos solicitudes de ayuda en tu zona, gracias por tu colaboración y ¡nos vemos mañana!"</string>
    <string name="dashboard_my_requests_button">Mis Solicitudes</string>
    <string name="dashboard_pending_requests_button">Solicitudes pendientes</string>
    <string name="dashboard_new_request_button">Solicitar ayuda</string>
    <string name="dashboard_star_button">Empezar</string>

    <!-- Profile -->
    <string name="profile_title">Perfil</string>
    <string name="profile_edit_button">Editar</string>
    <string name="profile_update_button">Actualizar</string>
    <string name="profile_profile_updated">Perfil actualizado!</string>
    <string name="profile_error_updating_profile">Error actualizando perfil…</string>

    <!-- Request help -->
    <string name="request_help_title">Nueva solicitud de ayuda</string>
    <string name="request_help_help_request_type">Tipo de ayuda</string>
    <string name="request_help_help_request_type_invalid">Tipo de ayuda no válida</string>
    <string name="request_help_message">Comentario</string>
    <string name="request_help_message_invalid">Comentario no válido</string>
    <string name="request_help_terms_and_conditions">Acepto que la plataforma automaticamente facilite mi nombre y teléfono de contacto, al voluntario que acepte mi petición de ayuda</string>
    <string name="request_help_terms_and_conditions_invalid">Debes aceptar los términos y condiciones</string>
    <string name="request_help_create_request_button">Crear solicitud</string>
    <string name="request_help_request_created">Solicitud creada!</string>
    <string name="request_help_request_failed">Error creando la solicitud!</string>

    <!-- Request detail -->
    <string name="request_detail_title">Solicitud de Ayuda</string>
    <string name="request_detail_i_help_you">¡Yo te ayudo!</string>
    <string name="request_detail_cancel">Cancelar</string>
    <string name="request_detail_created_at">Creada el:</string>
    <string name="request_detail_adress">Dirección:</string>
    <string name="request_detail_state">Provincia:</string>
    <string name="request_detail_city">Cty:</string>
    <string name="request_detail_phone">Teléfono</string>
    <string name="request_detail_accepted">Solicitud aceptada correctamente</string>
    <string name="request_detail_cancel_success">Solicitud de ayuda cancelada</string>
    <string name="request_detail_accept_dialog_title">Confirmar colaboracion</string>
    <string name="request_detail_accept_dialog_subtitle">Estas apunto de hacer algo importante por una persona que te necesita. ¿Quieres continuar?</string>
    <string name="request_detail_accept_dialog_confirm">Continuar</string>
    <string name="request_detail_accept_dialog_cancel">Aceptar</string>
    
</resources>
